--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,22 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
+    <div class="red"></div>
+    <div class="black"></div>
+    <div id="container">
+      <h1 class="todo-header">JUGADORES DE NEWELL´S OLD BOYS</h1>
+      <input id="addToDo" type="text" placeholder="agrega quien juega hoy" />
+      <ul>
+        <li>
+          <span><i class="fa fa-trash"></i></span>
+        </li>
+        <li>
+          <span><i class="fa fa-trash"></i></span>
+        </li>
+        <li>
+          <span><i class="fa fa-trash"></i></span>
+        </li>
+      </ul>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
